--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
         <exec.mainClass>org.rascalmpl.shell.RascalShell</exec.mainClass>
         <rascal.test.memory>3</rascal.test.memory>
         <maven.compiler.release>11</maven.compiler.release>
-        <rascal-maven.version>0.30.0-RC7</rascal-maven.version>
+        <rascal-maven.version>0.30.0-RC8</rascal-maven.version>
         <jline.version>3.27.0</jline.version>
     </properties>
 
@@ -132,6 +132,10 @@
                 <version>${rascal-maven.version}</version>
                 <configuration>
                     <bootstrapRascalVersion>0.41.0-RC24</bootstrapRascalVersion>
+                    <parallel>true</parallel>
+                    <parallelPreChecks>
+                        <pre>${project.basedir}/src/org/rascalmpl/library/Prelude.rsc</pre>
+                    </parallelPreChecks>
                 </configuration>
                 <executions>
                     <execution>
@@ -141,6 +145,10 @@
                             <goal>compile</goal>
                         </goals>
                         <configuration>
+                            <parallel>true</parallel>
+                            <parallelPreChecks>
+                               <pre>${project.basedir}/src/org/rascalmpl/library/Prelude.rsc</pre>
+                            </parallelPreChecks>
                             <errorsAsWarnings>false</errorsAsWarnings> 
                             <bin>${project.build.outputDirectory}</bin>
                             <srcs>
@@ -149,7 +157,6 @@
                             <libs>
                             </libs>
                             <srcIgnores>
-                                <ignore>${project.basedir}/src/org/rascalmpl/tutor/lang/rascal/tutor/examples/</ignore>
                                 <ignore>${project.basedir}/src/org/rascalmpl/library/experiments</ignore>
                                 <ignore>${project.basedir}/src/org/rascalmpl/library/resource</ignore>
                                 <ignore>${project.basedir}/src/org/rascalmpl/library/lang/rascal/tests</ignore>
