fixed some documentation errors

--- a/pom.xml
+++ b/pom.xml
@@ -186,6 +186,11 @@
                             </srcs>
                             <srcIgnores>
                                 <ignore>${project.basedir}/src/org/rascalmpl/library/lang/rascal</ignore>
+                                <ignore>${project.basedir}/src/org/rascalmpl/library/experiments</ignore>
+                                <ignore>${project.basedir}/src/org/rascalmpl/library/resource</ignore>
+                                <ignore>${project.basedir}/src/org/rascalmpl/library/lang/rascal/tests</ignore>
+                                <ignore>${project.basedir}/src/org/rascalmpl/library/lang/rascal/grammar/tests</ignore>
+                                <ignore>${project.basedir}/src/org/rascalmpl/library/lang/rascal/syntax/tests</ignore>
                             </srcIgnores>
                         </configuration>
                     </execution>
