--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,12 @@
 
     <groupId>org.rascalmpl</groupId>
     <artifactId>rascal</artifactId>
-    <version>0.41.0-RC25-SNAPSHOT</version>
+    <version>0.41.0-RC25</version>
     <packaging>jar</packaging>
 
     <scm>
         <developerConnection>scm:git:ssh://git@github.com/usethesource/rascal.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>v0.41.0-RC25</tag>
     </scm>
 
     <!-- dependency resolution configuration (usethesource) -->
@@ -137,6 +137,7 @@
                         <pre>${project.basedir}/src/org/rascalmpl/library/Prelude.rsc</pre>
                     </parallelPreChecks>
                 </configuration>
+                <!--
                 <executions>
                     <execution>
                         <id>it-compile</id>
@@ -204,7 +205,8 @@
                             <sourceLookup>|std:///|</sourceLookup>
                         </configuration>
                         </execution> 
-                </executions>
+                    </executions>
+                -->
             </plugin>
             <plugin>
                 <artifactId>maven-clean-plugin</artifactId>
