--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -25,7 +25,7 @@ jobs:
           cache: 'maven'
 
       - name: Run Tests
-        run: mvn -B -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn -Drascal.compile.skip -Drascal.tutor.skip -Drascal.test.memory=14 test
+        run: mvn -B -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn -Drascal.compile.skip -Drascal.tutor.skip -Drascal.test.memory=2 -Dsurefire.rerunFailingTestsCount=3 test
 
       - uses: codecov/codecov-action@v4
         continue-on-error: true # sometimes this one fails, that shouldn't stop a build
@@ -71,7 +71,7 @@ jobs:
 
       - name: Test if release # just to be extra sure for a release
         if: startsWith(github.ref, 'refs/tags/v')
-        run: mvn -Drascal.test.memory=10 -Drascal.compile.skip -Drascal.tutor.skip test 
+        run: mvn -Dsurefire.rerunFailingTestsCount=3 -Drascal.test.memory=2 -Drascal.compile.skip -Drascal.tutor.skip test 
 
       - name: Attach artifact 
         id: build-artifact
@@ -151,7 +151,7 @@ jobs:
 
       - name: Run Tests
         # single quotes to help windows deal with argument splitting
-        run: mvn -B '-Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn' '-Drascal.compile.skip' '-Drascal.tutor.skip' '-Drascal.test.memory=2' test
+        run: mvn -B '-Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn' '-Drascal.compile.skip' '-Drascal.tutor.skip' '-Dsurefire.rerunFailingTestsCount=3' '-Drascal.test.memory=2' test
 
       - uses: codecov/codecov-action@v4
         continue-on-error: true # sometimes this one fails, that shouldn't stop a build
@@ -181,7 +181,7 @@ jobs:
         run: bash src/org/rascalmpl/compiler/lang/rascalcore/check/tests/download-test-jars.sh
 
       - name: Run Tests
-        run: mvn -B -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn -Pcompiler-tests -Drascal.compile.skip -Drascal.tutor.skip -Drascal.test.memory=7 test
+        run: mvn -B -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn -Pcompiler-tests -Drascal.compile.skip -Drascal.tutor.skip -Drascal.test.memory=2 -Dsurefire.rerunFailingTestsCount=3 test
 
       - uses: codecov/codecov-action@v4
         continue-on-error: true # sometimes this one fails, that shouldn't stop a build
