--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
         <exec.mainClass>org.rascalmpl.shell.RascalShell</exec.mainClass>
         <rascal.test.memory>3</rascal.test.memory>
         <maven.compiler.release>11</maven.compiler.release>
-        <rascal-maven.version>0.30.0-RC9</rascal-maven.version>
+        <rascal-maven.version>0.30.0-RC10</rascal-maven.version>
         <jline.version>3.27.0</jline.version>
     </properties>
 
@@ -136,7 +136,7 @@
                     <parallelPreChecks>
                         <pre>${project.basedir}/src/org/rascalmpl/library/Prelude.rsc</pre>
                     </parallelPreChecks>
-                </configuration>
+                    </configuration> <!--
                 <executions>
                     <execution>
                         <id>it-compile</id>
@@ -173,7 +173,6 @@
                         </goals>
                         <configuration>
                             <isPackageCourse>false</isPackageCourse>
-                            <enableStandardLibrary>false</enableStandardLibrary>
                             <errorsAsWarnings>false</errorsAsWarnings>
                             <bin>${project.build.outputDirectory}</bin>
                             <funding>${project.basedir}/FUNDING</funding>
@@ -204,7 +203,7 @@
                             <sourceLookup>|std:///|</sourceLookup>
                         </configuration>
                         </execution> 
-                    </executions>
+                    </executions>-->
             </plugin>
             <plugin>
                 <artifactId>maven-clean-plugin</artifactId>
