--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -14,18 +14,18 @@ on:
 jobs:
   tests:
     runs-on: buildjet-4vcpu-ubuntu-2204-arm
+    os: ${{matrix.os}}
     strategy:
       fail-fast: false
       matrix:
-        retry: [1,2,3,4]
+        os: [buildjet-4vcpu-ubuntu-2204-arm, buildjet-2vcpu-ubuntu-2204]
+        retry: [1,2]
     env:
       MAVEN_OPTS: "-Xmx1G -Dhttps.protocols=TLSv1.2 -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn -Dorg.slf4j.simpleLogger.showDateTime=true -Djava.awt.headless=true"
     steps: 
       - uses: catchpoint/workflow-telemetry-action@v2
         with:
-          proc_trace_sys_enable: true
-          proc_trace_chart_show: true
-          metric_frequency: 2
+          metric_frequency: 1
 
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
