--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,8 +13,7 @@ on:
 
 jobs:
   tests:
-    runs-on: buildjet-4vcpu-ubuntu-2204-arm
-    os: ${{matrix.os}}
+    runs-on: ${{matrix.os}}
     strategy:
       fail-fast: false
       matrix:
