Reducing thread stack size

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,7 +20,7 @@ jobs:
         os: [buildjet-4vcpu-ubuntu-2204-arm, buildjet-2vcpu-ubuntu-2204]
         retry: [1,2]
     env:
-      MAVEN_OPTS: "-Xmx512M -Dhttps.protocols=TLSv1.2 -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn -Dorg.slf4j.simpleLogger.showDateTime=true -Djava.awt.headless=true"
+      MAVEN_OPTS: "-Xmx1G -Dhttps.protocols=TLSv1.2 -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn -Dorg.slf4j.simpleLogger.showDateTime=true -Djava.awt.headless=true"
     steps: 
       - uses: catchpoint/workflow-telemetry-action@v2
         with:
@@ -35,4 +35,4 @@ jobs:
 
       - name: Run Tests
           # maven gets 1GB, the forked junit runner gets 2GB
-        run: mvn '-Drascal.test.memory=1' -B '-Drascal.compile.skip' '-Drascal.tutor.skip'  test
+        run: mvn '-Drascal.test.memory=2' -B '-Drascal.compile.skip' '-Drascal.tutor.skip'  test
