nasty bug in pom.xml prevented any .tpl file from being added to the jar

--- a/pom.xml
+++ b/pom.xml
@@ -331,7 +331,7 @@
                                     </excludes>
                                 </filter>
                                 <filter>
-                                    <artifact>org.rascalmpl:typepal:*</artifact>
+                                    <artifact>org.rascalmpl:typepal</artifact>
                                     <excludes>
                                         <exclude>META-INF/*</exclude>
                                         <exclude>examples/**</exclude>
