--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>org.rascalmpl</groupId>
     <artifactId>rascal</artifactId>
-    <version>0.41.0-RC30</version>
+    <version>0.41.0-RC31-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <scm>
