the id tag of every execution has to be "default-<phase>" and each execution must have a different id. Otherwise the execution-specific configuration tags are not picked up. With this we finally get |std:///| into the .tpl files

--- a/pom.xml
+++ b/pom.xml
@@ -139,7 +139,7 @@
                     </configuration> 
                 <executions>
                     <execution>
-                        <id>it-compile</id>
+                        <id>default-compile</id>
                         <phase>compile</phase>
                         <goals>
                             <goal>compile</goal>
@@ -166,7 +166,7 @@
                         </configuration>
                     </execution>
                     <execution>
-                        <id>default-cli</id>
+                        <id>default-resources</id>
                         <phase>compile</phase>
                         <goals>
                             <goal>tutor</goal>
@@ -194,7 +194,7 @@
                         </configuration>
                     </execution>
                     <execution>
-                        <id>it-package</id>
+                        <id>default-package</id>
                         <phase>prepare-package</phase>
                         <goals>
                             <goal>package</goal>
@@ -202,8 +202,8 @@
                         <configuration>
                             <sourceLookup>|std:///|</sourceLookup>
                         </configuration>
-                        </execution> 
-                    </executions>
+                    </execution> 
+                </executions>
             </plugin>
             <plugin>
                 <artifactId>maven-clean-plugin</artifactId>
