packager should know about srcs folders

--- a/pom.xml
+++ b/pom.xml
@@ -200,6 +200,9 @@
                             <goal>package</goal>
                         </goals>
                         <configuration>
+                            <srcs>
+                                <src>${project.basedir}/src/org/rascalmpl/library</src>
+                            </srcs>
                             <sourceLookup>|std:///|</sourceLookup>
                         </configuration>
                     </execution> 
