set maven-plugin to 0.30.0-RC18

--- a/pom.xml
+++ b/pom.xml
@@ -129,7 +129,7 @@
             <plugin>
                 <groupId>org.rascalmpl</groupId>
                 <artifactId>rascal-maven-plugin</artifactId>
-                <version>0.30.0-RC18-SNAPSHOT</version>
+                <version>0.30.0-RC18</version>
                 <configuration>
                     <bootstrapRascalVersion>0.41.0-RC34</bootstrapRascalVersion>
                     <parallel>true</parallel>
