--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -27,9 +27,6 @@ jobs:
       - name: Run Tests
         run: mvn -B -Drascal.compile.skip -Drascal.tutor.skip -Drascal.test.memory=14 test
 
-      - name: Clean side-effects of tests
-        run: mvn -B clean
-
       - uses: codecov/codecov-action@v4
         continue-on-error: true # sometimes this one fails, that shouldn't stop a build
         with:
@@ -68,14 +65,13 @@ jobs:
           cache: 'maven'
 
       - name: Compile & Bootstrap
-        run: mvn -B clean compile -Dwebdriver.chrome.driver=/usr/local/bin/chromedriver -Dwebdriver.chrome.browser=`which chrome` 
+        run: mvn -B compile -Dwebdriver.chrome.driver=/usr/local/bin/chromedriver -Dwebdriver.chrome.browser=`which chrome` 
         env:
           MAVEN_OPTS: "-Xmx14G -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn -Dorg.slf4j.simpleLogger.showDateTime=true -Djava.awt.headless=true"
 
-      # Commented out to avoid leakage of .tpl files from the tests into the target folder
-      # - name: Test if release # just to be extra sure for a release
-      #   if: startsWith(github.ref, 'refs/tags/v')
-      #   run: mvn -Drascal.test.memory=10 -Drascal.compile.skip -Drascal.tutor.skip test 
+      - name: Test if release # just to be extra sure for a release
+        if: startsWith(github.ref, 'refs/tags/v')
+        run: mvn -Drascal.test.memory=10 -Drascal.compile.skip -Drascal.tutor.skip test 
 
       - name: Attach artifact 
         id: build-artifact
