--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
         <exec.mainClass>org.rascalmpl.shell.RascalShell</exec.mainClass>
         <rascal.test.memory>3</rascal.test.memory>
         <maven.compiler.release>11</maven.compiler.release>
-        <rascal-maven.version>0.30.0-RC24</rascal-maven.version>
+        <rascal-maven.version>0.30.0-RC25</rascal-maven.version>
         <jline.version>3.27.0</jline.version>
     </properties>
 
@@ -156,13 +156,13 @@
                             </srcs>
                             <libs>
                             </libs>
-                            <srcIgnores>
+                            <ignores>
                                 <ignore>${project.basedir}/src/org/rascalmpl/library/experiments</ignore>
                                 <ignore>${project.basedir}/src/org/rascalmpl/library/resource</ignore>
                                 <ignore>${project.basedir}/src/org/rascalmpl/library/lang/rascal/tests</ignore>
-                                <ignore>${project.basedir}/src/org/rascalmpl/library/lang/rascal/grammar/tests</ignore>
+                              <ignore>${project.basedir}/src/org/rascalmpl/library/lang/rascal/grammar/tests</ignore>
                                 <ignore>${project.basedir}/src/org/rascalmpl/library/lang/rascal/syntax/tests</ignore>
-                            </srcIgnores>
+                            </ignores>
                         </configuration>
                     </execution>
                     <execution>
@@ -183,14 +183,14 @@
                             <srcs>
                                 <src>${project.basedir}/src/org/rascalmpl/library</src>
                             </srcs>
-                            <srcIgnores>
+                            <ignores>
                                 <ignore>${project.basedir}/src/org/rascalmpl/library/lang/rascal</ignore>
                                 <ignore>${project.basedir}/src/org/rascalmpl/library/experiments</ignore>
                                 <ignore>${project.basedir}/src/org/rascalmpl/library/resource</ignore>
                                 <ignore>${project.basedir}/src/org/rascalmpl/library/lang/rascal/tests</ignore>
                                 <ignore>${project.basedir}/src/org/rascalmpl/library/lang/rascal/grammar/tests</ignore>
                                 <ignore>${project.basedir}/src/org/rascalmpl/library/lang/rascal/syntax/tests</ignore>
-                            </srcIgnores>
+                            </ignores>
                         </configuration>
                     </execution>
                     <execution>
