--- a/pom.xml
+++ b/pom.xml
@@ -459,7 +459,7 @@
         <dependency> 
             <groupId>io.usethesource</groupId>
             <artifactId>vallang</artifactId>
-            <version>1.0.0-RC20-SNAPSHOT</version>
+            <version>1.0.0-RC19</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
