--- a/pom.xml
+++ b/pom.xml
@@ -565,6 +565,11 @@
         </dependency>
         <dependency>
             <groupId>org.apache.maven</groupId>
+            <artifactId>maven-repository-metadata</artifactId>
+            <version>${maven-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.maven</groupId>
             <artifactId>maven-settings</artifactId>
             <version>${maven-version}</version>
         </dependency>
