--- a/test/org/rascalmpl/util/maven/poms/ranges/pom.xml
+++ b/test/org/rascalmpl/util/maven/poms/ranges/pom.xml
@@ -11,9 +11,22 @@
       <dependency>
         <groupId>com.google.code.gson</groupId>
         <artifactId>gson</artifactId>
-	<version>[2.9.1,3.0)</version>
+	<version>[2.8.0,2.12.0]</version> 
         <scope>compile</scope>
       </dependency>
+
+      <dependency>
+	<groupId>org.eclipse.lsp4j</groupId>
+	<artifactId>org.eclipse.lsp4j.jsonrpc</artifactId>
+	<version>0.24.0</version>
+      </dependency>
+      <dependency>
+        <groupId>com.google.code.gson</groupId>
+        <artifactId>gson</artifactId>
+	<version>[2.9.0,2.11.0]</version> 
+        <scope>compile</scope>
+      </dependency>
+
   </dependencies>
 
 
