Rewrote test such that they do not have to download 60mb every time, and that they respect settings.xml mirror settings

--- a/test/org/rascalmpl/util/maven/poms/multi-module/pom.xml
+++ b/test/org/rascalmpl/util/maven/poms/multi-module/pom.xml
@@ -27,9 +27,9 @@
     <dependencyManagement>
         <dependencies>
           <dependency>
-            <groupId>org.rascalmpl</groupId>
-            <artifactId>rascal</artifactId>
-            <version>0.40.17</version>
+            <groupId>io.usethesource</groupId>
+            <artifactId>capsule</artifactId>
+            <version>0.7.1</version>
           </dependency>
           <dependency>
             <groupId>org.rascalmpl</groupId>
