--- a/test/org/rascalmpl/util/maven/poms/multi-module/example-core/pom.xml
+++ b/test/org/rascalmpl/util/maven/poms/multi-module/example-core/pom.xml
@@ -13,8 +13,8 @@
     
     <dependencies>
         <dependency>
-          <groupId>org.rascalmpl</groupId>
-          <artifactId>rascal</artifactId>
+          <groupId>io.usethesource</groupId>
+          <artifactId>capsule</artifactId>
         </dependency>
         <dependency>
           <groupId>org.rascalmpl</groupId>
