Fix job name to wait for.

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -108,7 +108,7 @@ jobs:
           jobs: |
             tests (macos-latest)
             tests (windows-latest)
-            tests (buildjet-4vcpu-ubuntu-2204-arm)
+            test-linux
           ttl: 15
 
       - name: Deploy
